--- a/ParcelDelivery/app/src/main/AndroidManifest.xml
+++ b/ParcelDelivery/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name="com.example.ParcelDelivery.ui.user.UserAddActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name="com.example.ParcelDelivery.ui.user.UserDetailsActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
