--- a/ParcelDelivery/app/src/main/AndroidManifest.xml
+++ b/ParcelDelivery/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.ParcelDelivery.ui.manager.ManagerActivity"></activity>
-        <activity android:name="com.example.ParcelDelivery.ui.login.LoginActivity">
+        <activity android:name=".CoordinatorActivity"></activity>
+        <activity android:name=".StorekeeperActivity" />
+        <activity android:name=".CourierActivity" />
+        <activity android:name=".ui.manager.ManagerActivity" />
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,17 +21,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.ParcelDelivery.ui.user.UserListActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:name=".ui.user.UserListActivity"
+            android:label="@string/app_name" />
         <activity
-            android:name="com.example.ParcelDelivery.ui.user.UserAddActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:name=".ui.user.UserAddActivity"
+            android:label="@string/app_name" />
         <activity
-            android:name="com.example.ParcelDelivery.ui.user.UserDetailsActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:name=".ui.user.UserDetailsActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
