--- a/ParcelDelivery/app/src/main/AndroidManifest.xml
+++ b/ParcelDelivery/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".ui.user.UserDetailsActivity"
             android:label="@string/app_name" />
+        <activity android:name=".ui.password_reset.ForgotPasswordActivity"></activity>
     </application>
 
 </manifest>
