--- a/ParcelDelivery/app/src/main/AndroidManifest.xml
+++ b/ParcelDelivery/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.parcel.ParcelAddActivity"></activity>
+        <activity android:name=".ui.parcel.ParcelAddActivity"/>
         <activity android:name=".ui.parcel.ParcelListActivity" />
-        <activity android:name=".ui.coordinator.CoordinatorActivity" />
+        <activity android:name=".ui.coordinator.CoordinatorActivity"/>
         <activity android:name=".ui.storekeeper.StorekeeperActivity" />
         <activity android:name=".ui.courier.CourierActivity" />
         <activity android:name=".ui.manager.ManagerActivity" />
@@ -30,6 +30,9 @@
             android:label="@string/app_name" />
         <activity
             android:name=".ui.user.UserDetailsActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".ui.user.UserTestActivity"
             android:label="@string/app_name" />
         <activity android:name=".ui.password_reset.ForgotPasswordActivity" />
     </application>
