--- a/ParcelDelivery/app/src/main/AndroidManifest.xml
+++ b/ParcelDelivery/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity
             android:name=".ui.user.UserDetailsActivity"
             android:label="@string/app_name" />
+        <activity
+            android:name=".ui.user.UserScheduleActivity"
+            android:label="@string/app_name" />
         <activity android:name=".ui.password_reset.ForgotPasswordActivity" />
     </application>
 
