Password change demo

--- a/ParcelDelivery/app/src/main/AndroidManifest.xml
+++ b/ParcelDelivery/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ParcelDelivery">
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.courier.CourierParcelListActivity"></activity>
+        <activity android:name=".ui.password_reset.ChangePasswordActivity"></activity>
+        <activity android:name=".ui.courier.CourierParcelListActivity" />
         <activity android:name=".ui.parcel.ParcelAddActivity" />
         <activity android:name=".ui.parcel.ParcelListActivity" />
         <activity android:name=".ui.coordinator.CoordinatorActivity" />
