Profile picture - step one ( I hope out of one)

--- a/ParcelDelivery/app/src/main/AndroidManifest.xml
+++ b/ParcelDelivery/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.password_reset.ChangePasswordActivity"></activity>
+        <activity android:name=".ui.avatar.AvatarActivity"></activity>
         <activity android:name=".ui.courier.CourierParcelListActivity" />
         <activity android:name=".ui.parcel.ParcelAddActivity" />
         <activity android:name=".ui.parcel.ParcelListActivity" />
