--- a/ParcelDelivery/app/src/main/AndroidManifest.xml
+++ b/ParcelDelivery/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:label="@string/app_name" />
         <activity
             android:name=".ui.user.UserDetailsActivity"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/app_name" />
         <activity
             android:name=".ui.user.UserScheduleActivity"
